style: correct email format in index.html; update star list styling in mod2.css for better alignment; fix image filename in module3.html

--- a/mod2.css
+++ b/mod2.css
@@ -53,6 +53,9 @@ ul.star-list {
     list-style-type: none;
     padding: 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 ul.star-list li {
